force-app/main/default/objects/Student__c/fields/About_Yourself__c.field-meta.xml
<CustomField>
    <fullName>About_Yourself__c</fullName>
    <label>About Yourself</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>