force-app/main/default/objects/Student__c/fields/E_mail__c.field-meta.xml
<CustomField>
    <fullName>E_mail__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>E-mail</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>