force-app/main/default/objects/Student__c/fields/Fees__c.field-meta.xml
<CustomField>
    <fullName>Fees__c</fullName>
    <inlineHelpText>Enter the amount</inlineHelpText>
    <label>Fees</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>