force-app/main/default/objects/Student__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Enter the first name</description>
    <inlineHelpText>enter the first name</inlineHelpText>
    <label>First Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>