force-app/main/default/objects/Student__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <formula>IF(Percent__c &gt;= 0.80, &quot;A&quot;,
IF(Percent__c &gt;= 0.60, &quot;B&quot;,
&quot;C&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grade</label>
    <type>Text</type>
</CustomField>