force-app/main/default/objects/Student__c/fields/Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Mobile_No__c</fullName>
    <inlineHelpText>Please enter the mobile no.</inlineHelpText>
    <label>Mobile No</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>