force-app/main/default/objects/Student__c/fields/Roll_No__c.field-meta.xml
<CustomField>
    <fullName>Roll_No__c</fullName>
    <inlineHelpText>Enter the roll number</inlineHelpText>
    <label>Roll No</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>